i don't know what i'm doing right now.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <button type="button" id="getNumbers" name="button">PLAY THE LOTTERY</button>
       <p id="errorMessage"></p>
       <p id="resultMessage"></p>
-      
+      <span><%= random %></span>
     </body>
   </html>
